--- a/Assignment1/Site.Master
+++ b/Assignment1/Site.Master
@@ -2,10 +2,10 @@
 
 <!DOCTYPE html>
 
-<!-- Name: Tarun Rana
+<!-- Name: Tarun Rana 
 Student Id: 300871205
 Date: September 30th 2016
-Sit.Master file -->
+Site.Master file -->
 <html lang="en">
 <head runat="server">
     <meta charset="utf-8" />
@@ -32,7 +32,7 @@ Sit.Master file -->
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Brand</a>
+                    <a class="navbar-brand" href="#">Assignment 1</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -41,7 +41,7 @@ Sit.Master file -->
 
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="Default.aspx">Home</a></li>
-                        <li><a href="Projects.aspx">Products</a></li>
+                        <li><a href="Projects.aspx">Projects</a></li>
                         <li><a href="Services.aspx">Services</a></li>
                         <li><a href="About.aspx">About Me</a></li>
                         <li><a href="Contact.aspx">Contact Me</a></li>
@@ -56,6 +56,8 @@ Sit.Master file -->
 
         <asp:ContentPlaceHolder ID="MainContent" runat="server">
         </asp:ContentPlaceHolder>
+        
+      	<h5 style='font-weight: bold; bottom:0; width:600px; margin:auto'>&nbsp;Copyright &copy; Tarun Rana - Student#: 300871205 - Software Engineering Technician</h5>
 
     </form>
     <!--Java Script Section-->
