--- a/Assignment1/Site1.Master
+++ b/Assignment1/Site1.Master
@@ -1,7 +1,11 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site1.master.cs" Inherits="Assignment1.Site1" %>
+﻿
+<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site1.master.cs" Inherits="Assignment1.Site1" %>
 
 <!DOCTYPE html>
-
+<!-- Name: Tarun Rana 
+Student Id: 300871205
+Date: September 30th 2016
+Site1.Master file -->
 <html lang="en">
 <head runat="server">
     <meta charset="utf-8" />
@@ -28,7 +32,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Brand</a>
+                    <a class="navbar-brand" href="#">Assignment 1</a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -52,6 +56,10 @@
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
         </div>
+
+      	<h5 style='font-weight: bold; bottom:0; width:600px; margin:auto'>&nbsp;Copyright &copy; Khushdial Singh - Student#: 300878370 - Software Engineering Technician</h5>
+
+
     </form>
     <!--Java Script Section-->
     <script src="Scripts/jquery-2.2.4.min.js"></script>
